<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/role_img"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:contentDescription="@null" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/role_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/role_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/role_hp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/san"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/role_san"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hun"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/role_hun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dmg"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/role_dmg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hunNeed"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/role_hunNeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/expNeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_img"
        android:layout_marginBottom="2dp"
        android:background="@color/green"
        android:ellipsize="marquee"
        android:focusable="false"
        android:gravity="center"
        android:padding="-3dp"
        android:singleLine="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expNeed"
        android:textSize="15sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/special"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:fadingEdge="none"
        android:scrollbars="none">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </ScrollView>

</RelativeLayout>