<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="3dp"
    android:background="@drawable/click_color">

    <ImageView
        android:id="@+id/item_img"
        android:layout_width="75dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/item_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/pink"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hp"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/item_hp"
                style="@style/progress_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="200"
                android:paddingRight="15dp"
                android:progress="50" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/san"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/item_san"
                style="@style/progress_san"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="250"
                android:paddingRight="15dp"
                android:progress="50" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hun"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/item_hun"
                style="@style/progress_hun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="300"
                android:paddingRight="15dp"
                android:progress="50" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>